--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Jeremy0826Spencer/EmbeddedBlog.git",
+  "homepage": "https://Jeremy0826Spencer.github.io",
   "name": "embedded-blog",
   "version": "0.1.0",
   "private": true,
