--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Jeremy0826Spencer.github.io",
+  "homepage": "https://Jeremy0826Spencer.github.io/EmbeddedBlog",
   "name": "embedded-blog",
   "version": "0.1.0",
   "private": true,
